# promptlint

./: .github_issue_body.md  .gitignore  .pre-commit-config.yaml  .promptlintrc  CONTRIBUTING.md  CURSOR_HOTKEY_GUIDE.md  FEATURES.md  README.md  action.yml  requirements.txt  rules-manifest.json  run_hotkey.py  setup.py
.claude/: settings.json  settings.local.json
.cursor/skills/promptlint/: SKILL.md
.github/workflows/: ci.yml  release.yml  test-action.yml
action/: README.md  action.yml  package-lock.json  package.json
action/.github/workflows/: test.yml
action/src/: index.ts
cli/: .promptlintrc  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
cli/demo/: demo.py  example_good_prompt.txt
cli/promptlint/: __main__.py  autofix.py  cli.py  constants.py  engine.py  io.py  output.py
cli/promptlint/rules/: __init__.py  quality.py  registry.py  security.py
cli/promptlint/utils/: config.py  token_math.py
cli/tests/: conftest.py  test_autofix.py  test_cli.py  test_cli_extended.py  test_config.py  test_edge_cases.py  test_engine.py  test_hypothesis.py  test_parity.py  test_performance.py  test_registry.py  test_rules.py  test_token_math.py
demo/: README.md  demo.py  example_bad_prompt.txt
demo-pipeline/: README.md  app.py  requirements.txt
demo-pipeline/static/: index.html
docs/: README.md  best-practices.md  cli-reference.md  configuration.md  getting-started.md  integrations.md  rules-reference.md
docs-site/: DEPLOY.md  changelog.md  index.md  package.json  vercel.json
docs-site/.vitepress/: config.ts
docs-site/.vitepress/theme/: custom.css
docs-site/guide/: auto-fix.md  best-practices.md  config-examples.md  configuration.md  faq.md  getting-started.md  how-it-works.md  installation.md  what-is-promptlint.md
docs-site/integrations/: docker.md  github-actions.md  gitlab-ci.md  pre-commit.md  vscode.md
docs-site/reference/: cli.md  configuration.md  exit-codes.md  output-formats.md
docs-site/rules/: actionability-weak-verbs.md  clarity-vague-terms.md  completeness-edge-cases.md  consistency-terminology.md  context-injection-boundary.md  cost-limit.md  cost.md  hallucination-risk.md  index.md  jailbreak-pattern.md  output-format-missing.md  output-length-missing.md  pii-in-prompt.md  politeness-bloat.md  prompt-injection.md  role-clarity.md  secret-in-prompt.md  specificity-constraints.md  specificity-examples.md  structure-sections.md  verbosity-redundancy.md  verbosity-sentence-length.md
docs/internal/: PRD-engine-v2.md  PRD-github-action.md  PRD-growth.md  github-issue-template.md  product-roadmap.md  v1-roadmap.md
landing/: README.md  index.html  package.json  server.js  supabase-setup.sql
landing/public/: index.html
npm/: .eslintrc.json  README.md  package-lock.json  package.json
npm/src/: cli.ts  config.ts  engine.ts
npm/src/rules/: cost.ts  quality.ts  security.ts  utils.ts
promptlint/: cli.py  engine.py
promptlint/hotkey/: __init__.py  __main__.py  config.json  dialog.py  service.py  tray.py
promptlint/rules/: cost.py  quality.py  security.py
promptlint/utils/: __init__.py  config.py  token_math.py
scripts/: com.promptlint.hotkey.plist  install_launch_agent.sh  install_service.bat  install_service_macos.sh  run_hotkey_service.sh  uninstall_launch_agent.sh  uninstall_service.bat  uninstall_service_macos.sh
vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/: INSTALL.md  README.md  extension.js  package.json
vscode/src/: codeActions.ts  config.ts  extension.ts  linter.ts  statusBar.ts
vscode/test-fixtures/: langchain_example.py  langchain_example.ts
