[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptlint"
version = "1.0.0"
description = "A static analyzer for LLM prompts — catches cost waste, quality issues, and security risks."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "PromptLint Contributors"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml~=6.0",
    "tiktoken~=0.5",
    "rich~=13.0",
]

[project.urls]
Homepage = "https://github.com/AryaanSheth/promptlint"
Repository = "https://github.com/AryaanSheth/promptlint"
Changelog = "https://github.com/AryaanSheth/promptlint/blob/main/cli/CHANGELOG.md"

[project.scripts]
promptlint = "promptlint.cli:main"

[tool.setuptools.packages.find]
include = ["promptlint*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
